added api template

--- a/demo_website/templates/login.html
+++ b/demo_website/templates/login.html
@@ -55,7 +55,7 @@
                         
                             <!-- Register buttons -->
                             <div class="text-center text-white mb-4">
-                                <p>Not a member? <a href="register">Register</a></p>
+                                <p>Not a member? <a href="api/register/">Register</a></p>
                             
                         </div>
                             </form>
