--- a/demo_website/templates/signup.html
+++ b/demo_website/templates/signup.html
@@ -1,8 +1,15 @@
-{% extends 'base.html'%}
+{% load static %} 
 
-{% block content %}
-
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<title>Registration</title>
+<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+</head>
+<body>
     <div class="container">
         <div class="row centered-form">
         <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
@@ -62,4 +69,5 @@
 	    		</div>
     		</div>
     	</div>
-		{% endblock %}
+</body>
+</html>
